--- a/desafio-03/projeto/index.html
+++ b/desafio-03/projeto/index.html
@@ -15,24 +15,24 @@
             <h1>Crie e compartilhe seu evento</h1>
             <p>O primeiro passo é preencher esse formulário de inscrição</p>
         </header>
-        <form>
+        <form id="my-form">
             <fieldset>
                 <div class="fieldset-wrapper">
                     <legend>Informações do Evento</legend>
 
                     <div class="input-wrapper">
                         <label for="event-title">Título do Evento <span>(Mínimo 8 caracteres)</span> </label>
-                        <input type="text" id="event-title">
+                        <input type="text" id="event-title" required minlength="8">
                     </div>
 
                     <div class="input-wrapper">
                         <label for="event-link">Link do Evento <span>(comece com https://)</span> </label>
-                        <input type="url" id="event-link">
+                        <input type="url" id="event-link" required>
                     </div>
 
                     <div class="input-wrapper">
                         <label for="event-whatsapp">WhatsApp para contato <span>(somente números)</span> </label>
-                        <input type="phone" id="event-whatsapp">
+                        <input type="phone" id="event-whatsapp" required minlength="8">
                     </div>
 
                     <div class="input-wrapper">
@@ -95,7 +95,18 @@
                     </div>
                 </div>
             </fieldset>
+
+            <!-- <button type="button"></button>  Não irá enviar o formulário -->
+            
         </form>
+        <footer class="form-buttons">
+            <button 
+                class="button" 
+                type="submit" 
+                form="my-form">
+                Salvar evento
+            </button>
+        </footer>
     </div>
 </body>
 </html>
