--- a/desafio-03/recriando-layout01/index.html
+++ b/desafio-03/recriando-layout01/index.html
@@ -53,38 +53,41 @@
                 <div class="fieldset-wrapper">
                     <h2>PRIMEIRA MENTORIA</h2>
 
-                    <div class="input-wrapper">
-                        <label for="mentor-firstDate">Data <span>(DD/MM/AAAA)</span></label>
-                        <input type="date" name="first-date" id="mentor-firstDate">
-                    </div>
+                    <div class="col-3">
+                        <div class="input-wrapper">
+                            <label for="mentor-firstDate">Data <span>(DD/MM/AAAA)</span></label>
+                            <input type="date" name="first-date" id="mentor-firstDate">
+                        </div>
 
-                    <div class="input-wrapper">
-                        <label for="mentor-firstBegin">Das</label>
-                        <input type="time" name="first-begin" id="mentor-firstBegin">
-                    </div>
+                        <div class="input-wrapper">
+                            <label for="mentor-firstBegin">Das</label>
+                            <input type="time" name="first-begin" id="mentor-firstBegin">
+                        </div>
 
-                    <div class="input-wrapper">
-                        <label for="mentor-firstEnd">Até</label>
-                        <input type="date" name="first-end" id="mentor-firstEnd">
+                        <div class="input-wrapper">
+                            <label for="mentor-firstEnd">Até</label>
+                            <input type="date" name="first-end" id="mentor-firstEnd">
+                        </div>
                     </div>
                 </div>
 
                 <div class="fieldset-wrapper">
                     <h2>SEGUNDA MENTORIA</h2>
+                    <div class="col-3">
+                        <div class="input-wrapper">
+                            <label for="mentor-secondDate">Data <span>(DD/MM/AAAA)</span></label>
+                            <input type="date" name="second-date" id="mentor-secondDate">
+                        </div>
 
-                    <div class="input-wrapper">
-                        <label for="mentor-secondDate">Data <span>(DD/MM/AAAA)</span></label>
-                        <input type="date" name="second-date" id="mentor-secondDate">
-                    </div>
+                        <div class="input-wrapper">
+                            <label for="mentor-secondBegin">Das</label>
+                            <input type="time" name="second-begin" id="mentor-secondBegin">
+                        </div>
 
-                    <div class="input-wrapper">
-                        <label for="mentor-secondBegin">Das</label>
-                        <input type="time" name="second-begin" id="mentor-secondBegin">
-                    </div>
-
-                    <div class="input-wrapper">
-                        <label for="mentor-secondEnd">Até</label>
-                        <input type="date" name="second-end" id="mentor-secondEnd">
+                        <div class="input-wrapper">
+                            <label for="mentor-secondEnd">Até</label>
+                            <input type="date" name="second-end" id="mentor-secondEnd">
+                        </div>
                     </div>
                 </div>
             </fieldset>
